build_check.log

> Hearthlink@1.1.0 start
> electron .


App threw an error during load
G:\MythologIQ\Hearthlink\main.js:184
    const response = await fetch('http://localhost:3000', { timeout: 1000 }).catch(() => null);
                     ^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1185:20)
    at Module._compile (node:internal/modules/cjs/loader:1227:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1326:10)
    at Module.load (node:internal/modules/cjs/loader:1126:32)
    at Module._load (node:internal/modules/cjs/loader:967:12)
    at c._load (node:electron/js2c/node_init:2:13672)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:171:29)
    at ModuleJob.run (node:internal/modules/esm/module_job:194:25)
/mnt/g/MythologIQ/Hearthlink/node_modules/electron/dist/electron.exe exited with signal SIGTERM
[29752:0716/221613.207:ERROR:gpu_process_host.cc(993)] GPU process exited unexpectedly: exit_code=-1
